--- a/U/2DB1/UNCERTAINTY SIGN/Readme
+++ b/U/2DB1/UNCERTAINTY SIGN/Readme
@@ -4,7 +4,9 @@ username user_x2bdl2ek
 token x399ll09skngs
 ilp_over_http_url https://rs3.xpring.dev/ilp
 ilp_over_btp_url btp+wss://rs3.xpring.dev/ilp/btp
-payment_pointer $rs3.xpring.dev/accounts/user_x2bdl2ek/spspasset_codeXRPasset_scale9
+payment_pointer $rs3.xpring.dev/accounts/user_x2bdl2ek/spsp
+asset_codeXRP
+asset_scale9
 
 Send a Payment
 
